Bug 213333 - Alphabetic sorting does not work when using reverse display name
Summary: Alphabetic sorting does not work when using reverse display name
Status: VERIFIED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-11-05 22:35 UTC by Sabine Faure
Modified: 2010-05-26 23:57 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2009-11-05 22:35:25 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

- Launch Kontact and go to KAB
- Create 3 new contacts (Celine Jazz, Ian Miller, John Smith)
- The alphabetical order in the 'Name' column is correct.

- Now, right click on Ian Miller and select 'Edit contact...' 
- In the 'Edit Contact' dialogue select 'Reverse Name' from the Display combo box.
- Now the alphabetical order is wrong:
*Celine Jazz
*Miller Ian
*John Smith

To correct it, atm the only solution is to click twice on the 'Name' column heading
 
Trunk, Svn Rev 1045165
Comment 1 Tobias Koenig 2010-05-24 17:39:27 UTC
SVN commit 1130149 by tokoe:

Always sort the list of contacts when something changes

BUG: 213333


 M  +1 -0      contactsfilterproxymodel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1130149
Comment 2 Sabine Faure 2010-05-26 23:57:02 UTC
It is corrected now.

The names are sorted correctly (using the first display part of the name whether it is a name or surname).

Trunk, Svn Rev 1130931