Always sort the list of contacts when something changes

BUG: 213333

svn path=/trunk/KDE/kdepimlibs/; revision=1130149