contact/contactsfilterproxymodel.cpp
@@ -43,6 +43,7 @@ ContactsFilterProxyModel::ContactsFilterProxyModel( QObject *parent )
 {
   // contact names should be sorted correctly
   setSortLocaleAware( true );
+  setDynamicSortFilter( true );
 }
 
 ContactsFilterProxyModel::~ContactsFilterProxyModel()
